traefik/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /service-cicd
      - /service-barebones
      - /test
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-cicd
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      # match: Host(`linux`) && PathPrefix(`/service-cicd`)
      match: PathPrefix(`/service-cicd`)
      services:
        - kind: Service
          name: service-cicd
          namespace: apps
          port: 443
      middlewares:
        - name: stripprefix
          namespace: apps
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-barebones
  namespace: apps
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      # match: Host(`linux`) &&  PathPrefix(`/service-barebones`)
      match: PathPrefix(`/service-barebones`)
      services:
        - kind: Service
          name: service-barebones
          namespace: apps
          port: 443
      middlewares:
        - name: stripprefix
          namespace: apps
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-server
  namespace: apps
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      # match: Host(`linux`) &&  PathPrefix(`/service-barebones`)
      match: PathPrefix(`/test`)
      services:
        - kind: Service
          name: hello-server
          namespace: apps
          port: 443
      middlewares:
        - name: stripprefix
          namespace: apps
  tls:
    certResolver: default
